--- a/index.html
+++ b/index.html
@@ -16,13 +16,59 @@
   <body>
     <div class="page">
       <!-- Header-->
-      <header class="header">
+      <header class="header page__content">
         <div class="header__logo"></div>
         <div class="header__lang-links">
           <a href="#" class="header__lang-link">Ru</a>
           <a href="#" class="header__lang-link">En</a>
         </div>
       </header>
+
+      <main>
+        <div class="page__content page__content_mini">
+          <div class="lead">
+            <h1 class="lead__title">Путешествия по России</h1>
+            <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+            <figure class="figure">
+              <img src="images/lead-polka.jpg" alt="Иллюстрация: Ваша полка - верхняя" class="lead__image">
+              <figcaption class="lead__caption">Ваша полка - верхняя</figcaption>
+            </figure>
+          </div>
+          <div class="intro">
+            <h2 class="intro__title">Чего мы там не видели?</h2>
+            <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
+              провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
+              вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все
+              эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера
+              Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала
+              20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего
+              отпуска.</p>
+            <ul class="intro__list">
+              <li><span class="intro__list intro__list_span">Часовых поясов</span> 11</li>
+              <li><span class="intro__list intro__list_span">Объектов природного наследия ЮНЕСКО</span> 12</li>
+              <li><span class="intro__list intro__list_span">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+              <li><span class="intro__list intro__list_span">Природных заповедников</span> 101</li>
+              <li><span class="intro__list intro__list_span">Аэропортов</span> 241</li>
+            </ul>
+          </div>
+        </div>
+        <div class="page__content">
+          <div class="photo-grid">
+            <div class="photo-grid__item photo-grid__item_background_train"></div>
+            <div class="photo-grid__item photo-grid__item_background_atharva-tulsi"></div>
+            <div class="photo-grid__item photo-grid__item_background_steam"></div>
+            <div class="photo-grid__item photo-grid__item_background_forest"></div>
+            <div class="photo-grid__item photo-grid__item_background_frozen-lake"></div>
+            <div class="photo-grid__item photo-grid__item_background_baikal"></div>
+            <div class="photo-grid__item photo-grid__item_background_elbrus"></div>
+            <div class="photo-grid__item photo-grid__item_background_stones"></div>
+            <div class="photo-grid__item photo-grid__item_background_kamchatka"></div>
+            <div class="photo-grid__item photo-grid__item_background_kamchatka-mountain-field"></div>
+            <div class="photo-grid__item photo-grid__item_background_baikal-rocks"></div>
+            <div class="photo-grid__item photo-grid__item_background_ergaki"></div>
+          </div>
+        </div>
+      </main>
     </div>
   </body>
 </html>
