--- a/index.html
+++ b/index.html
@@ -25,48 +25,94 @@
       </header>
 
       <main>
-        <div class="page__content page__content_mini">
-          <div class="lead">
-            <h1 class="lead__title">Путешествия по России</h1>
-            <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-            <figure class="figure">
-              <img src="images/lead-polka.jpg" alt="Иллюстрация: Ваша полка - верхняя" class="lead__image">
-              <figcaption class="lead__caption">Ваша полка - верхняя</figcaption>
-            </figure>
-          </div>
-          <div class="intro">
-            <h2 class="intro__title">Чего мы там не видели?</h2>
-            <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
-              провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
-              вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все
-              эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера
-              Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала
-              20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего
-              отпуска.</p>
-            <ul class="intro__list">
-              <li><span class="intro__list intro__list_span">Часовых поясов</span> 11</li>
-              <li><span class="intro__list intro__list_span">Объектов природного наследия ЮНЕСКО</span> 12</li>
-              <li><span class="intro__list intro__list_span">Объектов культурного наследия ЮНЕСКО</span> 16</li>
-              <li><span class="intro__list intro__list_span">Природных заповедников</span> 101</li>
-              <li><span class="intro__list intro__list_span">Аэропортов</span> 241</li>
-            </ul>
-          </div>
+        <!-- Lead -->
+        <div class="lead page__content page__content_size_mini">
+          <h1 class="lead__title">Путешествия по России</h1>
+          <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+          <figure class="figure">
+            <img src="images/lead-polka.jpg" alt="Иллюстрация: Ваша полка - верхняя" class="lead__image">
+            <figcaption class="lead__caption">Ваша полка - верхняя</figcaption>
+          </figure>
         </div>
-        <div class="page__content">
-          <div class="photo-grid">
-            <div class="photo-grid__item photo-grid__item_background_train"></div>
-            <div class="photo-grid__item photo-grid__item_background_atharva-tulsi"></div>
-            <div class="photo-grid__item photo-grid__item_background_steam"></div>
-            <div class="photo-grid__item photo-grid__item_background_forest"></div>
-            <div class="photo-grid__item photo-grid__item_background_frozen-lake"></div>
-            <div class="photo-grid__item photo-grid__item_background_baikal"></div>
-            <div class="photo-grid__item photo-grid__item_background_elbrus"></div>
-            <div class="photo-grid__item photo-grid__item_background_stones"></div>
-            <div class="photo-grid__item photo-grid__item_background_kamchatka"></div>
-            <div class="photo-grid__item photo-grid__item_background_kamchatka-mountain-field"></div>
-            <div class="photo-grid__item photo-grid__item_background_baikal-rocks"></div>
-            <div class="photo-grid__item photo-grid__item_background_ergaki"></div>
+
+        <!-- Intro -->
+        <div class="intro page__content page__content_size_mini">
+          <h2 class="intro__title">Чего мы там не видели?</h2>
+          <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
+            провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
+            вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все
+            эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера
+            Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала
+            20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего
+            отпуска.</p>
+          <ul class="intro__list">
+            <li><span class="intro__list intro__list_span">Часовых поясов</span> 11</li>
+            <li><span class="intro__list intro__list_span">Объектов природного наследия ЮНЕСКО</span> 12</li>
+            <li><span class="intro__list intro__list_span">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+            <li><span class="intro__list intro__list_span">Природных заповедников</span> 101</li>
+            <li><span class="intro__list intro__list_span">Аэропортов</span> 241</li>
+          </ul>
+        </div>
+
+        <!-- Photo Gallery -->
+        <div class="photo-grid page__content">
+          <div class="photo-grid__item photo-grid__item_background_train"></div>
+          <div class="photo-grid__item photo-grid__item_background_atharva-tulsi"></div>
+          <div class="photo-grid__item photo-grid__item_background_steam"></div>
+          <div class="photo-grid__item photo-grid__item_background_forest"></div>
+          <div class="photo-grid__item photo-grid__item_background_frozen-lake"></div>
+          <div class="photo-grid__item photo-grid__item_background_baikal"></div>
+          <div class="photo-grid__item photo-grid__item_background_elbrus"></div>
+          <div class="photo-grid__item photo-grid__item_background_stones"></div>
+          <div class="photo-grid__item photo-grid__item_background_kamchatka"></div>
+          <div class="photo-grid__item photo-grid__item_background_kamchatka-mountain-field"></div>
+          <div class="photo-grid__item photo-grid__item_background_baikal-rocks"></div>
+          <div class="photo-grid__item photo-grid__item_background_ergaki"></div>
+        </div>
+
+        <!-- Places -->
+        <div class="places page__content page__content_size_mini">
+          <div class="place">
+            <h2 class="place__title">Куршская коса</h2>
+            <div class="place__website">
+              <p class="place__url-heading">URL</p>
+              <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
+            </div>
+            <img src="images/place-kosa.jpg" alt="Фотография: Куршская коса" class="place__image">
+            <div class="place__paragraphs">
+              <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
+                спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой.
+                Уникальная природная зона на краю российского анклава.</p>
+              <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и
+                исследователя
+                там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи
+                небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и
+                запах стального, прохладного моря.</p>
+            </div>
           </div>
+
+          <div class="place">
+            <h2 class="place__title">Кольский</h2>
+            <div class="place__website">
+              <p class="place__url-heading">URL</p>
+              <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National
+                Geographic</a>
+            </div>
+            <img src="images/place-kosa.jpg" alt="Фотография: Куршская коса" class="place__image">
+            <div class="place__paragraphs">
+              <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
+                которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+              <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля
+                в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии.
+                Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас
+                давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
+                в Мурманск.</p>
+            </div>
+          </div>
+          <div class="place"></div>
+          <div class="place"></div>
+          <div class="place"></div>
+          <div class="place"></div>
         </div>
       </main>
     </div>
