Незначительные изменени семантики

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         </div>
 
         <!-- Places -->
-        <div class="places page__content page__content_size_mini">
-          <div class="place">
+        <section class="places page__content page__content_size_mini">
+          <article class="place">
             <h2 class="place__title">Куршская коса</h2>
             <div class="place__website">
               <p class="place__url-heading">URL</p>
@@ -89,9 +89,9 @@
                 небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и
                 запах стального, прохладного моря.</p>
             </div>
-          </div>
+          </article>
 
-          <div class="place">
+          <article class="place">
             <h2 class="place__title">Кольский</h2>
             <div class="place__website">
               <p class="place__url-heading">URL</p>
@@ -108,12 +108,12 @@
                 давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
                 в Мурманск.</p>
             </div>
-          </div>
+          </article>
           <div class="place"></div>
           <div class="place"></div>
           <div class="place"></div>
           <div class="place"></div>
-        </div>
+        </section>
       </main>
     </div>
   </body>
