--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="page">
       <!-- Header-->
       <header class="header page__content">
-        <div class="header__logo"></div>
+        <img src="images/header-logo.svg" alt="Логотип страницы" class="header__logo">
         <div class="header__lang-links">
           <a href="#" class="header__lang-link">Ru</a>
           <a href="#" class="header__lang-link">En</a>
@@ -26,17 +26,17 @@
 
       <main>
         <!-- Lead -->
-        <div class="lead page__content page__content_size_mini">
+        <section class="lead page__content page__content_size_mini">
           <h1 class="lead__title">Путешествия по России</h1>
           <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
           <figure class="figure">
             <img src="images/lead-polka.jpg" alt="Иллюстрация: Ваша полка - верхняя" class="lead__image">
             <figcaption class="lead__caption">Ваша полка - верхняя</figcaption>
           </figure>
-        </div>
+        </section>
 
         <!-- Intro -->
-        <div class="intro page__content page__content_size_mini">
+        <section class="intro page__content page__content_size_mini">
           <h2 class="intro__title">Чего мы там не видели?</h2>
           <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
             провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
@@ -52,10 +52,10 @@
             <li><span class="intro__list intro__list_span">Природных заповедников</span> 101</li>
             <li><span class="intro__list intro__list_span">Аэропортов</span> 241</li>
           </ul>
-        </div>
+        </section>
 
-        <!-- Photo Gallery -->
-        <div class="photo-grid page__content">
+        <!-- Photo Gallery of Russian Nature-->
+        <section class="photo-grid page__content">
           <div class="photo-grid__item photo-grid__item_background_train"></div>
           <div class="photo-grid__item photo-grid__item_background_atharva-tulsi"></div>
           <div class="photo-grid__item photo-grid__item_background_steam"></div>
@@ -68,7 +68,7 @@
           <div class="photo-grid__item photo-grid__item_background_kamchatka-mountain-field"></div>
           <div class="photo-grid__item photo-grid__item_background_baikal-rocks"></div>
           <div class="photo-grid__item photo-grid__item_background_ergaki"></div>
-        </div>
+        </section>
 
         <!-- Places -->
         <section class="places page__content page__content_size_mini">
@@ -76,7 +76,7 @@
             <h2 class="place__title">Куршская коса</h2>
             <div class="place__website">
               <p class="place__url-heading">URL</p>
-              <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
+              <a href="http://park-kosa.ru" target="_blank" class="place__link">park-kosa.ru</a>
             </div>
             <img src="images/place-kosa.jpg" alt="Фотография: Куршская коса" class="place__image">
             <div class="place__paragraphs">
@@ -90,15 +90,15 @@
                 запах стального, прохладного моря.</p>
             </div>
           </article>
-
           <article class="place">
             <h2 class="place__title">Кольский</h2>
             <div class="place__website">
               <p class="place__url-heading">URL</p>
-              <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National
+              <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank"
+                 class="place__link">National
                 Geographic</a>
             </div>
-            <img src="images/place-kosa.jpg" alt="Фотография: Куршская коса" class="place__image">
+            <img src="images/place-kolsky.jpg" alt="Фотография: Кольский" class="place__image">
             <div class="place__paragraphs">
               <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
                 которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -109,12 +109,84 @@
                 в Мурманск.</p>
             </div>
           </article>
-          <div class="place"></div>
-          <div class="place"></div>
-          <div class="place"></div>
-          <div class="place"></div>
+          <article class="place">
+            <h2 class="place__title">Алтай</h2>
+            <div class="place__website">
+              <p class="place__url-heading">URL</p>
+              <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
+                 target="_blank"
+                 class="place__link">Facebook</a>
+            </div>
+            <img src="images/place-altai.jpg" alt="Фотография: Алтай" class="place__image">
+            <div class="place__paragraphs">
+              <p class="place__paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если
+                ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в
+                автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
+              <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы
+                увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а
+                на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+            </div>
+          </article>
+          <article class="place">
+            <h2 class="place__title">Зимний Байкал</h2>
+            <div class="place__website">
+              <p class="place__url-heading">URL</p>
+              <a href="https://vk.com/baikalmile"
+                 target="_blank"
+                 class="place__link">https://vk.com/baikalmile</a>
+            </div>
+            <img src="images/place-winter-baikal.jpg" alt="Фотография: Зимний байкал" class="place__image">
+            <div class="place__paragraphs">
+              <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это
+                самый большой источник пресной воды и одно из красивейших мест в России.</p>
+              <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
+                скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить
+                как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен
+                мировой рекорд — 197.011 км/ч.</p>
+            </div>
+          </article>
+
+          <article class="place">
+            <h2 class="place__title">Карелия</h2>
+            <div class="place__website">
+              <p class="place__url-heading">URL</p>
+              <a href="http://vodlozero.ru/"
+                 target="_blank"
+                 class="place__link">http://vodlozero.ru/</a>
+            </div>
+            <img src="images/place-karelia.jpg" alt="Фотография: Карелия" class="place__image">
+            <div class="place__paragraphs">
+              <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
+                лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
+                национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
+                полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
+                В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров
+                от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+            </div>
+          </article>
+        </section>
+
+        <!-- To Baikal "on dogs" -->
+        <section class="cover page__content page__wrap">
+          <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__link">
+            <div class="cover__overlay">
+              <h2 class="cover__title">До Байкала «на собаках»</h2>
+              <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+                электричках.</p>
+            </div>
+          </a>
         </section>
       </main>
+      <footer class="footer page__content">
+        <ul class="footer__links">
+          <li><a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a></li>
+          <li><a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a></li>
+          <li><a href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</a></li>
+          <li><a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a></li>
+          <li><a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a></li>
+        </ul>
+        <p class="footer__copyright">&copy; 2021 Daria R</p>
+      </footer>
     </div>
   </body>
 </html>
