--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         </section>
 
         <!-- To Baikal "on dogs" -->
-        <section class="cover page__content page__wrap">
+        <section class="cover page__wrap">
           <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__link">
             <div class="cover__overlay">
               <h2 class="cover__title">До Байкала «на собаках»</h2>
@@ -179,11 +179,11 @@
       </main>
       <footer class="footer page__content">
         <ul class="footer__links">
-          <li><a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a></li>
-          <li><a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a></li>
-          <li><a href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</a></li>
-          <li><a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a></li>
-          <li><a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a></li>
+          <li class="footer__list-item"><a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a></li>
+          <li class="footer__list-item"><a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a></li>
+          <li class="footer__list-item"><a href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</a></li>
+          <li class="footer__list-item"><a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a></li>
+          <li class="footer__list-item"><a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a></li>
         </ul>
         <p class="footer__copyright">&copy; 2021 Daria R</p>
       </footer>
