--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <header class="header page__content">
         <img src="images/header-logo.svg" alt="Логотип страницы" class="header__logo">
         <div class="header__lang-links">
-          <a href="#" class="header__lang-link">Ru</a>
+          <a href="#" class="header__lang-link header__lang-link_underlined">Ru</a>
           <a href="#" class="header__lang-link">En</a>
         </div>
       </header>
@@ -27,7 +27,7 @@
       <main>
         <!-- Lead -->
         <section class="lead page__content page__content_size_mini">
-          <h1 class="lead__title">Путешествия по России</h1>
+          <h1 class="lead__title">Путешес&shy;твия по России</h1>
           <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
           <figure class="figure">
             <img src="images/lead-polka.jpg" alt="Иллюстрация: Ваша полка - верхняя" class="lead__image">
@@ -71,7 +71,7 @@
         </section>
 
         <!-- Places -->
-        <section class="places page__content page__content_size_mini">
+        <section class="places page__places-wrap">
           <article class="place">
             <h2 class="place__title">Куршская коса</h2>
             <div class="place__website">
@@ -177,14 +177,23 @@
           </a>
         </section>
       </main>
+
+      <!-- Footer -->
       <footer class="footer page__content">
-        <ul class="footer__links">
-          <li class="footer__list-item"><a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a></li>
-          <li class="footer__list-item"><a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a></li>
-          <li class="footer__list-item"><a href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</a></li>
-          <li class="footer__list-item"><a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a></li>
-          <li class="footer__list-item"><a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a></li>
-        </ul>
+        <nav>
+          <ul class="footer__links">
+            <li class="footer__list-item"><a href="https://yandex.ru/maps" target="_blank"
+                                             class="footer__link">Карты</a></li>
+            <li class="footer__list-item"><a href="https://yandex.ru/pogoda" target="_blank"
+                                             class="footer__link">Погода</a></li>
+            <li class="footer__list-item"><a href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</a>
+            </li>
+            <li class="footer__list-item"><a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a>
+            </li>
+            <li class="footer__list-item"><a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a>
+            </li>
+          </ul>
+        </nav>
         <p class="footer__copyright">&copy; 2021 Daria R</p>
       </footer>
     </div>
