--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <meta name="keywords" content="Россия, путешествия, путешествие">
     <meta name="author" content="Daria R">
     <title>Путешествие по России</title>
-    <link rel="stylesheet" href="vendor/normalize.css">
-    <link rel="stylesheet" href="fonts/fonts.css">
     <link rel="stylesheet" href="pages/index.css">
     <link rel="shortcut icon" href="images/russia.png">
   </head>
@@ -18,10 +16,10 @@
       <!-- Header-->
       <header class="header page__content">
         <img src="images/header-logo.svg" alt="Логотип страницы" class="header__logo">
-        <div class="header__lang-links">
-          <a href="#" class="header__lang-link header__lang-link_underlined">Ru</a>
-          <a href="#" class="header__lang-link">En</a>
-        </div>
+        <ul class="header__lang-links">
+          <li class="header__lang-link-item"><a href="#" class="header__lang-link header__lang-link_active">Ru</a></li>
+          <li class="header__lang-link-item"><a href="#" class="header__lang-link">En</a></li>
+        </ul>
       </header>
 
       <main>
@@ -29,7 +27,7 @@
         <section class="lead page__content page__content_size_mini">
           <h1 class="lead__title">Путешес&shy;твия по России</h1>
           <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-          <figure class="figure">
+          <figure class="lead__figure">
             <img src="images/lead-polka.jpg" alt="Иллюстрация: Ваша полка - верхняя" class="lead__image">
             <figcaption class="lead__caption">Ваша полка - верхняя</figcaption>
           </figure>
@@ -46,28 +44,60 @@
             20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего
             отпуска.</p>
           <ul class="intro__list">
-            <li><span class="intro__list intro__list_span">Часовых поясов</span> 11</li>
-            <li><span class="intro__list intro__list_span">Объектов природного наследия ЮНЕСКО</span> 12</li>
-            <li><span class="intro__list intro__list_span">Объектов культурного наследия ЮНЕСКО</span> 16</li>
-            <li><span class="intro__list intro__list_span">Природных заповедников</span> 101</li>
-            <li><span class="intro__list intro__list_span">Аэропортов</span> 241</li>
+            <li><span class="intro__span">Часовых поясов</span> 11</li>
+            <li><span class="intro__span">Объектов природного наследия ЮНЕСКО</span> 12</li>
+            <li><span class="intro__span">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+            <li><span class="intro__span">Природных заповедников</span> 101</li>
+            <li><span class="intro__span">Аэропортов</span> 241</li>
           </ul>
         </section>
 
         <!-- Photo Gallery of Russian Nature-->
-        <section class="photo-grid page__content">
-          <div class="photo-grid__item photo-grid__item_background_train"></div>
-          <div class="photo-grid__item photo-grid__item_background_atharva-tulsi"></div>
-          <div class="photo-grid__item photo-grid__item_background_steam"></div>
-          <div class="photo-grid__item photo-grid__item_background_forest"></div>
-          <div class="photo-grid__item photo-grid__item_background_frozen-lake"></div>
-          <div class="photo-grid__item photo-grid__item_background_baikal"></div>
-          <div class="photo-grid__item photo-grid__item_background_elbrus"></div>
-          <div class="photo-grid__item photo-grid__item_background_stones"></div>
-          <div class="photo-grid__item photo-grid__item_background_kamchatka"></div>
-          <div class="photo-grid__item photo-grid__item_background_kamchatka-mountain-field"></div>
-          <div class="photo-grid__item photo-grid__item_background_baikal-rocks"></div>
-          <div class="photo-grid__item photo-grid__item_background_ergaki"></div>
+        <section class="page__content">
+          <ul class="photo-grid">
+            <li class="photo-grid__item">
+              <img src="images/photo-grid-train.jpg" alt="Фотография: Вид из окна поезда"
+                   class="photo-grid__item-image">
+            </li>
+            <li class="photo-grid__item">
+              <img src="images/photo-grid-atharva-tulsi.jpg" alt="Фотография: Горная вершина"
+                   class="photo-grid__item-image">
+            </li>
+            <li class="photo-grid__item">
+              <img src="images/photo-grid-tuman.jpg" alt="Фотография: Туманное поле" class="photo-grid__item-image">
+            </li>
+            <li class="photo-grid__item">
+              <img src="images/photo-grid-sochi.jpg" alt="Фотография: Горный лес" class="photo-grid__item-image">
+            </li>
+            <li class="photo-grid__item">
+              <img src="images/photo-grid-arisa.jpg" alt="Фотография: Замерзшее озеро" class="photo-grid__item-image">
+            </li>
+            <li class="photo-grid__item">
+              <img src="images/photo-grid-baikal.jpg" alt="Фотография: Побережье Байкала"
+                   class="photo-grid__item-image">
+            </li>
+            <li class="photo-grid__item">
+              <img src="images/photo-grid-elbrus.jpg" alt="Фотография: Вершина Эльбруса" class="photo-grid__item-image">
+            </li>
+            <li class="photo-grid__item">
+              <img src="images/photo-grid-stones.jpg" alt="Фотография: Отбойники" class="photo-grid__item-image">
+            </li>
+            <li class="photo-grid__item">
+              <img src="images/photo-grid-kamchatka-1.jpg" alt="Фотография: Горы Камчатки"
+                   class="photo-grid__item-image">
+            </li>
+            <li class="photo-grid__item">
+              <img src="images/photo-grid-kamchatka-2.jpg" alt="Фотография: Горный луг" class="photo-grid__item-image">
+            </li>
+            <li class="photo-grid__item">
+              <img src="images/photo-grid-baikal-2.jpg" alt="Фотография: Утёсы Байкала"
+                   class="photo-grid__item-image">
+            </li>
+            <li class="photo-grid__item">
+              <img src="images/photo-grid-ergaki.jpg" alt="Фотография: Заоблачные вершины"
+                   class="photo-grid__item-image">
+            </li>
+          </ul>
         </section>
 
         <!-- Places -->
